--- a/BanHangHD.Data/BanHangHD.Data.csproj
+++ b/BanHangHD.Data/BanHangHD.Data.csproj
@@ -49,6 +49,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BanHangHDDbContext.cs" />
+    <Compile Include="Infrastructure\DbFactory.cs" />
+    <Compile Include="Infrastructure\Disposable.cs" />
+    <Compile Include="Infrastructure\IDbFactory.cs" />
+    <Compile Include="Infrastructure\IRepository.cs" />
+    <Compile Include="Infrastructure\IUnitOfWork.cs" />
+    <Compile Include="Infrastructure\RepositoryBase.cs" />
+    <Compile Include="Infrastructure\UnitOfWork.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -60,6 +68,13 @@
       <Project>{a56542e7-f7e5-46c7-bc4b-30e3fd011310}</Project>
       <Name>BanHangHD.Common</Name>
     </ProjectReference>
+    <ProjectReference Include="..\BanHangHD.Model\BanHangHD.Model.csproj">
+      <Project>{D702BD08-BBEB-4C99-9B66-A8A9183F74F5}</Project>
+      <Name>BanHangHD.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Repositories\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
